# LumenEngine

./: .gitignore  CMakeLists.txt
Assets/: Common.hlsl  SimpleForward.shader
Assets/Material/: default.mat
Assets/Scene/: simpleScene.scene
Assets/Shader/: Common.hlsl  Default.shader  LightingUtil.hlsl  SimpleForward.shader  SkyBox.shader
Include/RenderGraph/: RenderGraph.h
Source/App/: CMakeLists.txt
Source/App/DemoApp/: CMakeLists.txt
Source/App/DemoApp/Demo/Private/: DemoWindows.cpp
Source/App/DemoApp/Demo/Public/: DemoWindows.h
Source/App/DemoWindows/: CMakeLists.txt  imgui.ini
Source/App/DemoWindows/Private/: DemoApp.cpp  TestEntity.cpp
Source/App/DemoWindows/Public/: DemoApp.h  TestEntity.h
Source/Core/: CMakeLists.txt
Source/Core/Async/Public/: RingQueue.h
Source/Core/Common/Private/: Archive.cpp  BaseObject.cpp  Guid.cpp
Source/Core/Common/Public/: Archive.h  BaseObject.h  Config.h  Guid.hpp  RingQueue.h
Source/Core/Common/Public/Details/: RingQueue.inl
Source/Core/Logger/Private/: Logger.cpp
Source/Core/Logger/Public/: Logger.h
Source/Core/Math/Private/: MathUtil.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
Source/Core/Math/Public/: MathUtil.h  Matrix.h  Quaternion.h  Vector.h  Vertor.h
Source/Core/Math/Public/Details/: Matrix.inl  Vertor.inl
Source/Core/Memory/Private/: TBuffer.cpp
Source/Core/Memory/Public/: MemoryPool.h  TBuffer.h
Source/Core/Memory/Public/Details/: MemoryPool.inl  TBuffer.inl
Source/Core/TaskGraph/Private/: TaskGraph.cpp  TaskThreadPool.cpp
Source/Core/TaskGraph/Public/: Task.h  TaskGraph.h  TaskThreadPool.h
Source/Core/TaskGraph/Public/Details/: TaskGraph.inl
Source/Core/Thread/Private/: RunnableThread.cpp  ThreadManager.cpp  ThreadPool.cpp
Source/Core/Thread/Public/: Runnable.h  RunnableThread.h  ThreadManager.h  ThreadPool.h
Source/Game/: CMakeLists.txt
Source/Game/Asset/Private/: AssetManager.cpp  Material.cpp  Mesh.cpp  Meta.cpp  Scene.cpp  Serializer.cpp  ShaderLab.cpp  ShaderLabCompiler.cpp  ShaderLabGenerator.cpp  Texture.cpp
Source/Game/Asset/Public/: AssetManager.h  Material.h  Mesh.h  Meta.h  Prefab.h  Scene.h  Serializer.h  ShaderLab.h  ShaderLabCompiler.h  ShaderLabGenerator.h  Texture.h
Source/Game/Asset/Public/Details/: Scene.inl  Serializer.inl
Source/Game/Engine/Private/: EditorEngine.cpp
Source/Game/Engine/Public/: BaseFramework.h  DeviceStatus.h  EditorEngine.h
Source/Game/GameFramework/Public/: BaseObject.h
Source/Game/GamePlay/Private/: AssetRef.cpp  BaseObject.cpp  Camera.cpp  Component.cpp  Entity.cpp  Light.cpp  MeshComponent.cpp  MeshEntity.cpp  MeshRendererComponent.cpp  TransformComponent.cpp
Source/Game/GamePlay/Public/: AssetRef.h  BaseObject.h  Camera.h  Component.h  Entity.h  Light.h  MeshComponent.h  MeshEntity.h  MeshRendererComponent.h  TransformComponent.h
Source/Game/Launch/Private/: Launcher.cpp
Source/Game/Launch/Public/: BaseFramework.h  Launcher.h
Source/Game/PlatformFramework/Private/: WindowsFramework.cpp
Source/Game/PlatformFramework/Public/: BaseFramework.h  WindowsFramework.h
Source/Game/PlatformFramework/Windows/Private/: ImguiManagerDx12.cpp  WindowsFramework.cpp  imgui_impl_dx12.cpp  imgui_impl_win32.cpp
Source/Game/PlatformFramework/Windows/Public/: ImguiManagerDx12.h  WindowsFramework.h  imgui_impl_dx12.h  imgui_impl_win32.h  stdafx.h
Source/Render/: CMakeLists.txt
Source/Render/RHI/Common/Public/: GraphicsRHI.h  RHICommandBuffer.h  RHICommandContext.h  RHIContext.h  RHIDescriptorHeap.h  RHIDevice.h  RHIFence.h  RHIPipelineState.h  RHIResource.h  RHIResourceView.h  RHIShader.h  RHISwapChain.h
Source/Render/RHI/D3D12/Private/: D3D12GraphicsRHI.cpp  D3DCommandBuffer.cpp  D3DCommandContext.cpp  D3DContext.cpp  D3DDescriptorHeap.cpp  D3DDevice.cpp  D3DFence.cpp  D3DFrameResource.cpp  D3DNativeResource.cpp  D3DPipelineState.cpp  D3DResource.cpp  D3DResourceView.cpp  D3DShader.cpp  D3DSwapChain.cpp  D3DUtil.cpp  DDSTextureLoader.cpp  FrameResource.cpp  MathHelper.cpp
Source/Render/RHI/D3D12/Public/: D3D12GraphicsRHI.h  D3DCommandBuffer.h  D3DCommandContext.h  D3DContext.h  D3DDescriptorHeap.h  D3DDevice.h  D3DFence.h  D3DFrameResource.h  D3DNativeResource.h  D3DPipelineState.h  D3DResource.h  D3DResourceView.h  D3DShader.h  D3DSwapChain.h  D3DUtil.h  DDSTextureLoader.h  FrameResource.h  MathHelper.h  UploadBuffer.h
Source/Render/RenderCore/Private/: RenderCommand.cpp  RenderContext.cpp  RenderPipeline.cpp  RenderThread.cpp  VisualBuffer.cpp
Source/Render/RenderCore/Public/: RenderCommand.h  RenderContext.h  RenderModule.h  RenderPipeline.h  RenderProxy.h  RenderThread.h  VisualBuffer.h
Source/Render/RenderGraph/Private/: RenderGraph.cpp
Source/Render/RenderGraph/Public/: RenderGraph.h
Source/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderGraph.h  main.cpp
Source/Test/: CMakeLists.txt
Source/Test/AssetTest/: CMakeLists.txt  main.cpp
Source/Test/AsyncTest/: CMakeLists.txt  main.cpp
Source/Test/LoggerTest/: CMakeLists.txt  main.cpp
Source/Test/ParserTest/: CMakeLists.txt  main.cpp
Source/Test/ReflectTest/: CMakeLists.txt  Vec.h  Vec_AutoRefl.inl  main.cpp
Source/Test/ReflectTest/Private/: Derived.cpp  main.cpp
Source/Test/ReflectTest/Public/: Derived.h
Source/Test/RenderGraphTest/: CMakeLists.txt  main.cpp
Source/Test/SerializeTest/: CMakeLists.txt
Source/Test/SerializeTest/Private/: Derived.cpp  main.cpp
Source/Test/SerializeTest/Public/: Derived.h
Source/Test/ShaderLabTest/: CMakeLists.txt  Test.hlsl  Test.shader  main.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/USRefl_AutoRefl/: CMakeLists.txt
Source/Tools/USRefl_AutoRefl/Private/: Meta.cpp  MetaGenerator.cpp  SourceModifier.cpp  TypeInfoGenerator.cpp  main.cpp
Source/Tools/USRefl_AutoRefl/Public/: Meta.h  MetaGenerator.h  SourceModifier.h  TypeInfoGenerator.h
Source/Tools/USRefl_AutoRefl/Public/USRefl/: Attr.h  AttrList.h  Base.h  BaseList.h  ElemList.h  Field.h  FieldList.h  NamedValue.h  TypeInfo.h  TypeInfoBase.h  USRefl.h  Util.h  config.h
Source/Tools/USRefl_AutoRefl/Public/USRefl/detail/: FieldTraits.h
